--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
   <!-- Animate CSS File -->
   <link rel="stylesheet" href="https://www.themesindustry.com/html/treely/css/animate.css" />
 
-  <!-- Font-Awesome CSS File -->
-  <link rel="stylesheet" href="https://www.themesindustry.com/html/treely/css/fontawesome-all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"  />
 
   <!-- Themify CSS File -->
   <link rel="stylesheet" href="https://www.themesindustry.com/html/treely/css/themify-icons.css" />
@@ -267,7 +266,7 @@
                 <div class="row">
                   <div class="col-lg-4 col-md-4 col-sm-4">
                     <div class="stats-block-inner text-center wow fadeInUp" data-wow-delay="300ms">
-                      <i class="ti-hand-point-right text-color-dark"></i>
+                    <i class="fa fa-user text-color-dark"></i>
                       <div class="stats-number-inner text-color-dark fontface-one font-weight-700 padding-top-20">
                         <span>4200</span>+
                       </div>
@@ -279,7 +278,7 @@
 
                   <div class="col-lg-4 col-md-4 col-sm-4">
                     <div class="stats-block-inner text-center wow fadeInUp" data-wow-delay="350ms">
-                      <i class="ti-bar-chart text-color-dark"></i>
+                      <i class="fa fa-registered text-color-dark"></i>
                       <div class="stats-number-inner text-color-dark fontface-one font-weight-700 padding-top-20">
                         <span>9500</span>+
                       </div>
@@ -290,7 +289,7 @@
                   </div>
                   <div class="col-lg-4 col-md-4 col-sm-4">
                     <div class="stats-block-inner text-center wow fadeInUp" data-wow-delay="400ms">
-                      <i class="ti-blackboard text-color-dark"></i>
+                      <i class="fa fa-registered text-color-dark"></i>
                       <div class="stats-number-inner text-color-dark fontface-one font-weight-700 padding-top-20">
                         <span>6000</span>+
                       </div>
@@ -409,9 +408,6 @@
             </div>
           </div>
         </section>
-
-
-
     </section>
     <section id="gallery">
       <section class="company-portfolio-section padding-top-bottom" id="company-portfolio-section">
@@ -459,7 +455,7 @@
                         <img src="https://www.themesindustry.com/html/treely/images/portfolio-2.jpg" alt="" />
                       </div>
                       <div class="cbp-caption-activeWrap portfolio-hover-effect">
-                        <i class="ti-zoom-in"></i>
+                        <i class="fa fa-search"></i>
                       </div>
                     </a>
                     <h3 class="fontface-one font-weight-500 portfolio-heading-text padding-top-30 padding-bottom-15">
@@ -477,7 +473,7 @@
                         <img src="https://www.themesindustry.com/html/treely/images/portfolio-1.jpg" alt="" />
                       </div>
                       <div class="cbp-caption-activeWrap portfolio-hover-effect">
-                        <i class="ti-zoom-in"></i>
+                        <i class="fa fa-search"></i>
                       </div>
                     </a>
                     <h3 class="fontface-one font-weight-500 portfolio-heading-text padding-top-30 padding-bottom-15">
@@ -495,7 +491,7 @@
                         <img src="https://www.themesindustry.com/html/treely/images/portfolio-4.jpg" alt="" />
                       </div>
                       <div class="cbp-caption-activeWrap portfolio-hover-effect">
-                        <i class="ti-zoom-in"></i>
+                        <i class="fa fa-search"></i>
                       </div>
                     </a>
                     <h3 class="fontface-one font-weight-500 portfolio-heading-text padding-top-30 padding-bottom-15">
@@ -513,7 +509,7 @@
                         <img src="https://www.themesindustry.com/html/treely/images/portfolio-3.jpg" alt="" />
                       </div>
                       <div class="cbp-caption-activeWrap portfolio-hover-effect">
-                        <i class="ti-zoom-in"></i>
+                        <i class="fa fa-search"></i>
                       </div>
                     </a>
                     <h3 class="fontface-one font-weight-500 portfolio-heading-text padding-top-30 padding-bottom-15">
@@ -531,7 +527,7 @@
                         <img src="https://www.themesindustry.com/html/treely/images/portfolio-6.jpg" alt="" />
                       </div>
                       <div class="cbp-caption-activeWrap portfolio-hover-effect">
-                        <i class="ti-zoom-in"></i>
+                        <i class="fa fa-search"></i>
                       </div>
                     </a>
                     <h3 class="fontface-one font-weight-500 portfolio-heading-text padding-top-30 padding-bottom-15">
@@ -549,7 +545,7 @@
                         <img src="https://www.themesindustry.com/html/treely/images/portfolio-7.jpg" alt="" />
                       </div>
                       <div class="cbp-caption-activeWrap portfolio-hover-effect">
-                        <i class="ti-zoom-in"></i>
+                        <i class="fa fa-search"></i>
                       </div>
                     </a>
                     <h3 class="fontface-one font-weight-500 portfolio-heading-text padding-top-30 padding-bottom-15">
@@ -567,7 +563,7 @@
                         <img src="https://www.themesindustry.com/html/treely/images/portfolio-5.jpg" alt="" />
                       </div>
                       <div class="cbp-caption-activeWrap portfolio-hover-effect">
-                        <i class="ti-zoom-in"></i>
+                        <i class="fa fa-search"></i>
                       </div>
                     </a>
                     <h3 class="fontface-one font-weight-500 portfolio-heading-text padding-top-30 padding-bottom-15">
