--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     </section>
     <!-- /Main Slider Section End -->
     <a class="button-setting button-setting-primary background-dark text-color-dark width-100 text-center" href="#."
-      style="border-radius: 0;">Register Now</a>
+      style="border-radius: 0;"><marquee behavior=""scrollamount="10" direction=""> <strong>REGISTER NOW FOR NIRMAN SMILE MARATHON</strong> </marquee></a>
     <!-- About Company Section -->
     <section class="about-company-section background-grey padding-top-bottom" id="about-company-section">
       <div class="container">
