--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                             diam eleifend.
                           </p>
                           <a href="#."
-                            class="button-setting background-primary text-color-white button-setting-secondary">
+                            class="button-setting background-dark text-color-white button-setting-secondary">
                             Register Now
                           </a>
                         </div>
